# egui_expressive

./: .gitignore  .rnd  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  fix_plugin.js  spec-Temp-AI.md
.github/workflows/: test.yml
docs/: illustrator-enhancements.md  index.html  migration-guide.md  raster-vectorization.md  release-checklist.md  versioning-policy.md
docs/ui-framework/: accessibility.md  api-stability.md  data-widgets.md  editor-canvas.md  forms.md  index.md  interaction.md  layout.md  module-map.md  overview.md  platform.md  render-fidelity-contract.md  tokens.md  tw-render-contract.md
examples/: accessibility_platform_gallery.rs  command_center_shell.rs  compat_gallery.rs  data_explorer_dashboard.rs  daw_strip.rs  forms_gallery.rs  generic_editor_canvas.rs  layout_grid_position_gallery.rs  neutraudio_shell.rs  primitive_gallery.rs  responsive_dashboard.rs  state_accessibility_gallery.rs  step_sequencer.rs  tailwind_style_gallery.rs  timeline.rs
figma-plugin/: README.md  code.js  manifest.json  ui.html
illustrator-plugin/: .debug  README.md  host.jsx  index.html  install.bat  install.sh  manifest.json  plugin.js  plugin.test.cjs
illustrator-plugin/CSXS/: manifest.xml
illustrator-plugin/installer/: .rnd  build_installer.bat  build_zxp.bat  build_zxp.sh  egui_expressive_plugin.nsi  install_zxp.bat
preview/: Cargo.toml  README.md  build.rs
preview/src/: main.rs  naming.rs  shared.rs
src/: backdrop.rs  gpu.rs  lib.rs  scene.rs  vectorize.rs  visual_diff.rs
src/accessibility/: focus.rs  live_region.rs  metadata.rs  mod.rs  motion.rs
src/animation/: animated_state.rs  easing.rs  memory.rs  mod.rs  sequence.rs  spring.rs  tests.rs  transition.rs  tween.rs
src/blur/: mod.rs
src/codegen/: dims.rs  effect_emit.rs  generate.rs  inference.rs  mod.rs  multi_file.rs  naming.rs  node_emit.rs  node_emit_layout.rs  render.rs  render_shape.rs  render_utils.rs  scaffold.rs  scene_codegen.rs  sidecar.rs  sidecar_appearance.rs  sidecar_appearance_fallback.rs  sidecar_diff.rs  sidecar_pattern.rs  sidecar_values.rs  svg_helpers.rs  svg_parser.rs  svg_parser_helpers.rs  types.rs
src/compat/: html.rs  kivy.rs  mod.rs  qt.rs  swiftui.rs  tkinter.rs
src/daw/: mod.rs
src/debug/: mod.rs
src/devtools/: macros.rs  mod.rs  panel.rs  registry.rs
src/draw/: app_owned_backdrop_blur_shader.wgsl  blend_shader.wgsl  blur_shader.wgsl  builders.rs  clipping.rs  color.rs  color_icons.rs  composite.rs  composite_core.rs  composite_hash.rs  composite_masks.rs  current_render_visual_proof_tests.rs  effects.rs  geometry.rs  gradients.rs  images.rs  layout.rs  mod.rs  painter.rs  painter_builders.rs  patterns.rs  raster_pixels.rs  rasterize.rs  shadows_images.rs  stack_tests.rs  strokes.rs  transform_clip_layout.rs
src/editor/: alignment.rs  axis.rs  canvas.rs  drop.rs  inspector.rs  interaction.rs  item_interaction.rs  lane_stack.rs  marquee.rs  mod.rs  persistence.rs  selection.rs  snap.rs  value_lane.rs
src/figma/: codegen.rs  mod.rs  parse.rs  runtime.rs  tests.rs
src/forms/: check.rs  editing.rs  field.rs  input.rs  mod.rs  rich_inputs.rs  schema.rs  select.rs  text.rs  validation.rs
src/icons/: mod.rs
src/interaction/: actions.rs  drag.rs  feedback.rs  feedback_tests.rs  focus.rs  gestures.rs  history.rs  mod.rs  shortcuts.rs  shortcuts_tests.rs
src/layout/: flex.rs  grid.rs  helpers.rs  mod.rs  position.rs  stack.rs
src/m3/: color.rs  components.rs  elevation.rs  mod.rs  theme.rs  tier2.rs  tier3.rs  typography.rs
src/platform/: backdrop.rs  clipboard.rs  file_drop.rs  mod.rs  system.rs
src/render/: mod.rs
src/responsive/: breakpoints.rs  context.rs  mod.rs  value.rs
src/scene/: effects_geom.rs  fill.rs  model.rs  render.rs  stroke.rs  tests.rs
src/state/: mod.rs
src/style/: mod.rs  text.rs  tokens.rs  visual.rs
src/surface/: mod.rs
src/svg/: ase.rs  document.rs  mod.rs  path.rs
src/swiftui/: mod.rs
src/tailwind/: border.rs  box_model.rs  builder.rs  color.rs  display.rs  effects.rs  exact_effects.rs  flex_child.rs  grid_intent.rs  interaction.rs  mod.rs  position.rs  render.rs  responsive.rs  shadow.rs  sizing.rs  spacing.rs  state.rs  theme_tokens.rs  types.rs  typography.rs  variants.rs
src/theme/: mod.rs
src/typography/: core.rs  mod.rs  render.rs  shaping.rs  text.rs
src/widgets/: channel_strip.rs  designer.rs  editor_tools.rs  menus.rs  (+5 more)
test/: Cargo.toml
tests/: api_surface_smoke.rs  interaction_smoke.rs  performance_smoke.rs  raster_vectorization.rs  visual_diff_harness.rs
(+97 files in other folders)
