[package]
name = "egui_expressive"
version = "0.1.0"
edition = "2021"
description = "Authoring-layer helpers for advanced custom UI in egui"
license = "MIT"
readme = "README.md"
keywords = ["egui", "gui", "ui", "widget", "daw"]
categories = ["gui"]

[features]
default = ["debug"]
debug = []
daw = []

[dependencies]
egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
flate2 = "1.0"
regex = "1"

[dev-dependencies]
eframe = "0.34"

[[bin]]
name = "figma-export"
path = "src/bin/figma_export.rs"

[[bin]]
name = "ai-parser"
path = "src/bin/ai_parser.rs"

[[example]]
name = "daw_strip"
path = "examples/daw_strip.rs"

[[example]]
name = "step_sequencer"
path = "examples/step_sequencer.rs"

[[example]]
name = "timeline"
path = "examples/timeline.rs"
