[package]
name = "egui_expressive"
version = "0.1.0"
edition = "2021"
description = "Expressive design system and authoring layer for beautiful egui UI without giving up immediate mode"
license = "MIT"
readme = "README.md"
keywords = ["egui", "gui", "ui", "widget", "daw"]
categories = ["gui"]

[features]
default = ["debug"]
debug = []
daw = []
clip-mask = ["tiny-skia"]
wgpu = ["dep:egui-wgpu"]
gpu-effects = ["wgpu"]

[dependencies]
egui = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lopdf = "0.34"
flate2 = "1.0"
regex = "1"
tiny-skia = { version = "0.11", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
egui-wgpu = { version = "0.34", optional = true }

[dev-dependencies]
eframe = "0.34"

[[bin]]
name = "figma-export"
path = "src/bin/figma_export.rs"

[[bin]]
name = "ai-parser"
path = "src/bin/ai_parser.rs"

[[example]]
name = "daw_strip"
path = "examples/daw_strip.rs"

[[example]]
name = "step_sequencer"
path = "examples/step_sequencer.rs"

[[example]]
name = "timeline"
path = "examples/timeline.rs"
